Add Action showPatientProfile to PatientController with api docs Just Have Problem With EditPatientProfile
